updated swagger API doc through tags
