# app/views/query_wizard/query_wizard.js
@@ -19,8 +19,7 @@ queries.controller('QueryWizardCtrl', function ($scope, $uibModalInstance, $log,
     $scope.change = function (d, selections) {
             if (d.selected) {
                 selections.push(d);
-            }
-            else {
+            } else {
                 for (var i = 0; i < selections.length; i++) {
                     $log.debug(selections[i]);
                     if (selections[i].name == d.name) {
@@ -37,8 +36,7 @@ queries.controller('QueryWizardCtrl', function ($scope, $uibModalInstance, $log,
             if (column.selected) {
                 column.db_table_name = dataset.db_table_name;
                 selections.push(column);
-            }
-            else {
+            } else {
                 for (var i = 0; i < selections.length; i++) {
                     $log.debug(selections[i]);
                     if (selections[i].name == column.name) {
@@ -68,8 +66,7 @@ queries.controller('QueryWizardCtrl', function ($scope, $uibModalInstance, $log,
         $scope.step++;
         if ($scope.step == 2) {
             $scope.loadTags();
-        }
-        else if ($scope.step == 4) $scope.buildQuery();
+        } else if ($scope.step == 4) $scope.buildQuery();
         //else if ($scope.step == 5) $scope.runQuery($scope.query);
         else if ($scope.step == 5) {
             $scope.runQuery($scope.query);
@@ -113,25 +110,18 @@ queries.controller('QueryWizardCtrl', function ($scope, $uibModalInstance, $log,
     $scope.buildQuery = function () {
         //query input packaged
         var queryInput = {
-            datasets: $scope.selectedDatasets
-            , joinTag: $scope.selectedTags
-            , addJoinColumn: $scope.addJoinColumn
-            , columns: $scope.selectedColumns
+            datasets: $scope.selectedDatasets,
+            joinTag: $scope.selectedTags,
+            addJoinColumn: $scope.addJoinColumn,
+            columns: $scope.selectedColumns
         }
         queryService.buildQuery(queryInput).then(function (response) {
-                    //success callback
-                    if (response.status == 'Success') {
-                        $scope.query = response.data;
-                        $scope.progressType = 'success';
-                        //failure callback
-                    }
-                    else {
-                        $scope.progressType = 'danger';
-                        $scope.buildQueryError = true;
-                        $log.error(response.data);
-                    }
-                }, //failure to connect
-                function (data) {
+                //success callback
+                if (response.status == 'Success') {
+                    $scope.query = response.data;
+                    $scope.progressType = 'success';
+                    //failure callback
+                } else {
                     $scope.progressType = 'danger';
                     $scope.buildQueryError = true;
                     $log.error(response.data);
@@ -140,18 +130,19 @@ queries.controller('QueryWizardCtrl', function ($scope, $uibModalInstance, $log,
             function (data) {
                 $scope.progressType = 'danger';
                 $scope.buildQueryError = true;
+                $log.error(response.data);
+            })
+    };
+    $scope.runQuery = function () {
+        var query = $scope.query;
+        queryService.runQuery(query).then(function (response) { //success callback
+                $scope.tableResult = response;
+                $scope.progressType = 'success';
+            }, //failure to connect
+            function (data) {
+                $scope.progressType = 'danger';
+                $scope.runQueryError = true;
                 $log.error('Failed to connect to server');
             })
-}; $scope.runQuery = function () {
-    var query = $scope.query;
-    queryService.runQuery(query).then(function (response) { //success callback
-            $scope.tableResult = response;
-            $scope.progressType = 'success';
-        }, //failure to connect
-        function (data) {
-            $scope.progressType = 'danger';
-            $scope.runQueryError = true;
-            $log.error('Failed to connect to server');
-        })
-};
+    };
 });
